Changed conversation logic

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -9,7 +9,7 @@
     <div
       class="message"
       [ngClass]="{ me: message.me }"
-      *ngFor="let message of conversation.messages"
+      *ngFor="let message of messages"
     >
       <div class="messageContent">
         {{ message.body }}
