--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,9 +1,8 @@
 <div id="container">
   <div id="header">
     <div class="avatarSection">
-      <div class="nameSection">{{conversation['firstName'] + ' ' +conversation['lastName']}}</div>
+      <div class="nameSection">{{user['firstName'] + ' ' + user['lastName']}}</div>
     </div>
-
   </div>
   <div id="body">
     <div
@@ -11,9 +10,12 @@
       [ngClass]="{ me: message.me }"
       *ngFor="let message of messages"
     >
-      <div class="messageContent">
-        {{ message.body }}
-        <div class="date">{{ message.date }}</div>
+      <div>
+        <div style="font-weight: bold">{{message.me ? senderName : user.firstName}}</div>
+        <div class="messageContent">
+          {{ message.body }}
+          <div class="date">{{ message.date| date: 'dd/MM/yyyy'}}</div>
+        </div>
       </div>
     </div>
   </div>
@@ -25,7 +27,7 @@
       ></textarea>
     </div>
     <div id="micIcon">
-      <img src="../../assets/images/voiceIcon.svg" />
+      <img src="../../assets/images/voiceIcon.svg"/>
     </div>
   </div>
 </div>
