--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -24,6 +24,7 @@
         }
       }
       .nameSection {
+        margin-left: 8px;
         flex-grow: 1;
         color: #545454;
         display: flex;
@@ -95,7 +96,7 @@
       textarea {
         width: 100%;
         height: 45px;
-        border: 0px;
+        border: 0;
         border-radius: 4px;
         resize: none;
         outline: none;
@@ -119,5 +120,13 @@
         cursor: pointer;
       }
     }
+  }
+}
+.icon {
+  min-width: 40px;
+  max-width: 40px;
+  margin: 0 10px;
+  img {
+    max-width: 100%;
   }
 }
