Added user name in sidebar section

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,9 @@
 <div id="sidebar">
   <div id="row1">
     <div id="sidebarHeader">
+      <div>
+        <span>{{userName}}</span>
+      </div>
       <div class="avatarContainer">
         <img (click)="logout()" src="../../assets/images/noPic.svg" />
       </div>
